Fix SAML Roles attribute being silently overwritten by Keycloak adapter if no RoleAttributeNames are specified - CLM-39199 (#15517)